frontend_tests/negative/offline_dependency/cmd/app/main.go
package main

import _ "example.com/missing"

func main() {}
